fixed contrast issue

--- a/src/style/index.module.css
+++ b/src/style/index.module.css
@@ -79,7 +79,8 @@ h2 {
 }
 
 h3 {
-  color: #4169b4;
+  color: #87A2D4;
+  font-size: 1.4em;
 }
 
 hr {
@@ -137,7 +138,7 @@ nav a {
 }
 
 .recName, .recRelationship {
-  color: #4169b4;
+  color: #87A2D4;
   text-align: left;
   margin: 0;
 }
@@ -180,7 +181,7 @@ nav a {
   align-self: center;
   font-size: 40px;
   margin: 0;
-  color: #4169b4;
+  color: #87A2D4;
   width: 30px;
 }
 
